bdr.BDR.scala.error
Erreur de compilation :
BDR:35: error: not found: value True
      fini = True}
             ^